<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drinks_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/drinks_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/drinks_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/drinks_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:transitionName="@string/drinks"
                    />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/drinks_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolbarTheme"
                app:popupTheme="@style/OverflowTheme" />




        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Select desired ingredients"
            android:textColor="@color/dimgray"
            android:focusable="true"
            android:theme="@style/EdittextTheme"
            />
    <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:text="hello"-->
            <!--android:layout_marginTop="20dp"-->

            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="5dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:layout_marginEnd="30dp"-->
            <!--android:background="@drawable/txtview_bg"-->

            <!--/>-->




    <android.support.v7.widget.GridLayout
        android:id="@+id/drinks_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowCount="4"
        android:padding="15dp"


        app:orientation="vertical"
        android:layout_marginTop="20dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
        <!--android:layout_gravity="fill_vertical"-->

        <Button
            android:id="@+id/lemon"
            app:layout_gravity="fill_horizontal"



            android:layout_margin="5dp"
            android:layout_marginTop="20dp"

            android:text="@string/lemon"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"

            />
        <!--app:layout_row="0"-->
        <Button
            android:id="@+id/mint"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            app:layout_gravity="fill_horizontal"
            android:text="@string/mint"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/sugar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            app:layout_gravity="fill_horizontal"

            android:text="@string/sugar"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/salt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            app:layout_gravity="fill_horizontal"
            android:text="@string/salt"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/iceCubes"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            app:layout_gravity="fill_horizontal"
            android:text="@string/ice_cubes"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/water"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/water"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/soda"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/soda"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/MyButton"
            />
        <Button
            android:id="@+id/blackSalt"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/Black_salt"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"

            />
        <Button
            android:id="@+id/sugarcaneJuice"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/sugarcane_juice"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"

            />
        <Button
            android:id="@+id/banana"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/Banana"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"

            />
        <Button
            android:id="@+id/yoghurt"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/yoghurt"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"

            />
        <Button
            android:id="@+id/cashew_nut"

            app:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/cashew_nut"
            android:background="@drawable/grid_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true"

            />



    </android.support.v7.widget.GridLayout>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>